name:          transformers-compat-tests
category:      Compatibility
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      https://github.com/ekmett/transformers-compat/
bug-reports:   https://github.com/ekmett/transformers-compat/issues
copyright:     Copyright (C) 2012-2015 Edward A. Kmett
synopsis:      transformers-compat tests
description:   @transformers-copmat@ tests
build-type:    Simple
tested-with:   GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.4
             , GHC == 8.10.7
             , GHC == 9.0.2
             , GHC == 9.2.8
             , GHC == 9.4.8
             , GHC == 9.6.7
             , GHC == 9.8.4
             , GHC == 9.10.3
             , GHC == 9.12.2

source-repository head
  type: git
  location: https://github.com/ekmett/transformers-compat.git

flag tests
  default: True
  description: Enable the tests.

test-suite spec
  if !flag(tests)
    buildable:          False

  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:        GenericsSpec
                        GenericsTypes
  build-depends:        base             >= 4.3  && < 5
                      , hspec            >= 2    && < 3
                      , QuickCheck       >= 2    && < 3
                      , transformers-compat
  if !impl(ghc >= 8.4)
    build-depends:      generic-deriving >= 1.10 && < 2
  if !impl(ghc >= 8.6)
    build-depends:      deriving-compat  >= 0.4  && < 1
  build-tool-depends:   hspec-discover:hspec-discover >= 2 && < 3
  hs-source-dirs:       .
  ghc-options:          -Wall -threaded -rtsopts
  default-language:     Haskell2010
